@@ -1224,11 +1224,6 @@
                 <order>org.apache.linkis,org.apache,org.springframework,javax,java,scala,,\#</order>
               </importOrder>
 
-              <excludes>
-                <exclude>**/restful/**/*RestfulApi.java</exclude>
-                <exclude>**/restful/**/*Restful.java</exclude>
-              </excludes>
-
               <removeUnusedImports/>
 
               <licenseHeader>
@@ -1314,6 +1309,28 @@
       <properties>
         <rat.skip>false</rat.skip>
       </properties>
+    </profile>
+    <profile>
+      <id>jdk11-on</id>
+      <activation>
+        <jdk>[11,)</jdk>
+      </activation>
+      <properties>
+        <maven.compiler.release>8</maven.compiler.release>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--add-opens java.base/java.util=ALL-UNNAMED
+                --add-opens java.base/java.nio=ALL-UNNAMED
+                --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>release</id>
